Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37373

InnoDB partition table disallow local GTIDs in galera

    XMLWordPrintable

Details

    • Can result in unexpected behaviour
    • Q4/2025 Galera Maintenance

    Description

      As per MDEV-20715 below conditions disallow local GTIDs in galera cluster.

      A DDL statement is executed with wsrep_OSU_method=RSU set.
      A DML statement writes to a non-InnoDB table.
      A DML statement writes to an InnoDB table with wsrep_on=OFF set.

      However, I found that InnoDB partition table also not allowing local GTIDs.
      Is that intended ? otherwise, we need to correct documentation.

      MariaDB [(none)]> show global variables like '%wsrep_mode%';
      +---------------+---------------------+
      | Variable_name | Value               |
      +---------------+---------------------+
      | wsrep_mode    | DISALLOW_LOCAL_GTID |
      +---------------+---------------------+
       
      MariaDB [test]> show create table sales\G
      *************************** 1. row ***************************
             Table: sales
      Create Table: CREATE TABLE `sales` (
        `customer_id` int(11) NOT NULL,
        `customer_name` varchar(40) DEFAULT NULL,
        `store_id` varchar(20) NOT NULL,
        `bill_number` int(11) NOT NULL,
        `bill_date` date NOT NULL,
        `amount` decimal(8,2) NOT NULL,
        PRIMARY KEY (`bill_date`)
      ) ENGINE=InnoDB DEFAULT CHARSET=latin1 COLLATE=latin1_swedish_ci
       PARTITION BY RANGE (year(`bill_date`))
      (PARTITION `p0` VALUES LESS THAN (2016) ENGINE = InnoDB,
       PARTITION `p1` VALUES LESS THAN (2017) ENGINE = InnoDB,
       PARTITION `p2` VALUES LESS THAN (2018) ENGINE = InnoDB,
       PARTITION `p3` VALUES LESS THAN (2020) ENGINE = InnoDB)
       
      MariaDB [test]> INSERT INTO sales
          ->   VALUES (1, 'Michael', 'S001', 101, '2015-01-02', 125.56),
          ->   (2, 'Jim', 'S003', 103, '2015-01-25', 476.50),
          ->   (3, 'Dwight', 'S012', 122, '2016-02-15', 335.00),
          ->   (4, 'Andy', 'S345', 121, '2016-03-26', 787.00),
          ->   (5, 'Pam', 'S234', 132, '2017-04-19', 678.00),
          ->   (6, 'Karen', 'S743', 111, '2017-05-31', 864.00),
          ->   (7, 'Toby', 'S234', 115, '2018-06-11', 762.00),
          ->   (8, 'Oscar', 'S012', 125, '2019-07-24', 300.00),
          ->   (9, 'Darryl', 'S456', 119, '2019-08-02', 492.20);  
      ERROR 4165 (HY000): Galera replication not supported
       
      MariaDB [test]> show global variables like '%version%';
      +-----------------------------------+------------------------------------------+
      | Variable_name                     | Value                                    |
      +-----------------------------------+------------------------------------------+
      | in_predicate_conversion_threshold | 1000                                     |
      | protocol_version                  | 10                                       |
      | slave_type_conversions            |                                          |
      | system_versioning_alter_history   | ERROR                                    |
      | system_versioning_asof            | DEFAULT                                  |
      | system_versioning_insert_history  | OFF                                      |
      | tls_version                       | TLSv1.2,TLSv1.3                          |
      | version                           | 10.11.13-MariaDB-log                     |
      | version_comment                   | MariaDB Server                           |
      | version_compile_machine           | aarch64                                  |
      | version_compile_os                | Linux                                    |
      | version_malloc_library            | system                                   |
      | version_source_revision           | 8fb09426b98583916ccfd4f8c49741adc115bac3 |
      | version_ssl_library               | OpenSSL 3.2.2 4 Jun 2024                 |
      | wsrep_patch_version               | wsrep_26.22                              |
      +-----------------------------------+------------------------------------------+
      15 rows in set (0.011 sec)
      

      Attachments

        Activity

          People

            janlindstrom Jan Lindström
            muhammad.irfan Muhammad Irfan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0.5d
                0.5d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h 10m Time Not Required
                3h 10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.